--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/assembler",
-            "args": ["Otype.as", "Otype.mc"],
+            "args": ["Rtype.as", "Rtype.mc"],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "C/C++: make assembler"
         }
