--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "${workspaceFolder}/assembler",
+            "program": "${workspaceFolder}/simulator",
             "args": ["testcases/test_all_op.as", "output2.mc"],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "C/C++: make assembler"
